# batect-ml-template

./: .gitignore  Dockerfile  README.md  batect.yml  pyproject.toml
scripts/: setup.sh
scripts/go/: go-mac.sh
scripts/tests/: run-unit-tests.sh
tests/: test_hello_world.py
