[tool.poetry]
name = "batect-ml-template"
version = "0.1.0"
description = ""
authors = [""]
# packages = [{include = "train", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.5.1"
thinc = "^8.1"
spacy = "^3.3" # 3.4.3
openpyxl = "^3.0.10"
nltk = "^3.7"
scikit-learn = "^1.1.3"

[tool.poetry.dev-dependencies]
jupyter = "1.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"