[tool.poetry]
name = "batect-ml-template"
version = "0.1.0"
description = "A template for ML projects, with dependency management simplified by batect"
authors = ["David Tan <davidtan@thoughtworks.com>"]
# packages = [{include = "training", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.5.1"

[tool.poetry.dev-dependencies]
jupyter = "1.0.0"
black = "23.1.0"
pylint = "^2.16.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"